# SimpleMLP

./: LISCENCE  README.md  network.py  pyproject.toml  test.py  value.py
src/SimpleMLP.egg-info/: PKG-INFO  SOURCES.txt
src/package/: network.py  value.py
test/: test.py
tests/: test.py
